Fix bold rendering and spacing in paper cards
- Replace **markdown bold** with <strong> tags (markdown doesn't render
  inside raw HTML divs in Jekyll/kramdown)
- Remove blank lines inside divs to prevent unwanted <p> margin stacking
- Add p { margin } override inside .paper-card to tighten spacing

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -9,6 +9,11 @@
   border-left: 3px solid $info-color;
   padding-left: 1em;
   margin-bottom: 2em;
+
+  p {
+    margin-top: 0;
+    margin-bottom: 0.4em;
+  }
 }
 
 .paper-card--wip {
